add if in cmake

--- a/1/CMakeLists.txt
+++ b/1/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.2)
 
-project(helloworld VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
+if (DEFINED ENV{TRAVIS_BUILD_NUMBER})
+    project(helloworld VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
+else()
+    project(helloworld)
+endif()
 
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
