modic CMakeList now it is work

--- a/1/CMakeLists.txt
+++ b/1/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.12)
 if (DEFINED ENV{TRAVIS_BUILD_NUMBER})
     project(helloworld VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
 else()
-    project(helloworld)
+    project(helloworld VERSION 0.0.1)
 endif()
 
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
@@ -21,9 +21,13 @@ set_target_properties(helloworld_cli helloworld test_version PROPERTIES
 target_include_directories(helloworld
     PRIVATE "${CMAKE_BINARY_DIR}"
 )
+
 set_target_properties(test_version PROPERTIES
     COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
     INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
+)
+target_include_directories(test_version 
+      PRIVATE "${CMAKE_BINARY_DIR}"
 )
 
 target_link_libraries(helloworld_cli PRIVATE
